--- a/drools-exmaple/src/main/resources/application.properties
+++ b/drools-exmaple/src/main/resources/application.properties
@@ -4,4 +4,4 @@ cloud.aws.region.static=us-east-1
 cloud.aws.credentials.accessKey=${AWS_ACCESS_KEY_ID}
 cloud.aws.credentials.secretKey=${AWS_SECRET_ACCESS_KEY}
 
-app.awsServices.bucketName=rules-bucket-demo
+app.awsServices.bucketName=${S3_BUCKET_NAME}
